@@ -27,7 +27,8 @@ public class NoLoophole implements IJoueur {
 		this.nomJoueur = (mycolour == 1) ? "noir" : "blanc";
 		this.joueur = new Joueur(this.nomJoueur);
 		this.board = new PlateauEscampe();
-		this.algorithm = new Minimax(new HeuristiqueEscampe(), joueur, new Joueur((mycolour == 1) ? "blanc" : "noir"));
+		this.algorithm = new AlphaBeta(new HeuristiqueEscampe(), joueur,
+				new Joueur((mycolour == 1) ? "blanc" : "noir"));
 	}
 
 	@Override
@@ -37,46 +38,50 @@ public class NoLoophole implements IJoueur {
 
 	@Override
 	public String choixMouvement() {
-		//probleme = new ProblemeEscampeSimple(board, nomJoueur);
+		// probleme = new ProblemeEscampeSimple(board, nomJoueur);
+		System.out.println("test3");
 		String coup = null;
 		System.out.println(board.pieces);
 		System.out.println(nbTours);
 		nbTours++;
 		if (board.pieces.isEmpty()) {
-			coup = "A6/B5/C6/D5/E6/F5";
-		} else if (board.pieces.size() == 6) {
+			System.out.println("premiers à jouer");
 			coup = "A1/B2/C1/D2/E1/F2";
+		} else if (board.pieces.size() == 6) {
+			//if (!board.basLibre()) {
+			//	coup = "A1/B2/C1/D2/E1/F2";
+			//} else {
+				coup = "A6/B5/C6/D5/E6/F5";
+			//}
 		} else {
 			if (board.gameOver()) {
 				return "GameOver";
 			}
 			// Version graphe d'Etat
-//			Solution solution = new Solution();//algorithm.chercheSolution(this.probleme);
-//			if (solution == null) {
-//				return "E";
-//			}
-//			Iterator<Etat> itr = solution.descendingIterator();
-//			System.out.println(solution);
-//			System.out.println(((PlateauEscampe)solution.getLast()).dernierCoup);
-//			System.out.println(((PlateauEscampe)solution.getFirst()).dernierCoup);
-//			
-//			if (itr.hasNext()) {
-//				coup = ((PlateauEscampe) itr.next()).dernierCoup;
-//			}
-//			coup = ((PlateauEscampe) solution.get(0)).dernierCoup;
-			
+			// Solution solution = new
+			// Solution();//algorithm.chercheSolution(this.probleme);
+			// if (solution == null) {
+			// return "E";
+			// }
+			// Iterator<Etat> itr = solution.descendingIterator();
+			// System.out.println(solution);
+			// System.out.println(((PlateauEscampe)solution.getLast()).dernierCoup);
+			// System.out.println(((PlateauEscampe)solution.getFirst()).dernierCoup);
+			//
+			// if (itr.hasNext()) {
+			// coup = ((PlateauEscampe) itr.next()).dernierCoup;
+			// }
+			// coup = ((PlateauEscampe) solution.get(0)).dernierCoup;
+
 			// Version théorie des jeux
-			//System.out.println(Arrays.toString(this.board.copy().coupsPossibles(this.joueur)));
-			coup = this.algorithm.meilleurCoup(this.board.copy(), 500);
+			// System.out.println(Arrays.toString(this.board.copy().coupsPossibles(this.joueur)));
+
+			coup = this.algorithm.meilleurCoup(this.board.copy(), Math.min(2* nbTours, 50));
+			// coup = this.algorithm.meilleurCoup(this.board.copy(), 50);
 			if (coup == null) {
 				this.board.lisereActuel = -1;
 				return "E";
 			}
-//			coup = this.algorithm.meilleurCoup(this.board.copy(), Math.min(nbTours,3));
-//			if (coup == null) {
-//				this.board.lisereActuel = -1;
-//				return "E";
-//			}
 			System.out.println(coup);
 		}
 		System.out.println(coup);
@@ -94,6 +99,7 @@ public class NoLoophole implements IJoueur {
 
 	@Override
 	public void mouvementEnnemi(String coup) {
+		System.out.println(coup);
 		this.board.play(coup, (this.nomJoueur == "noir") ? "blanc" : "noir");
 	}
 
@@ -101,4 +107,5 @@ public class NoLoophole implements IJoueur {
 	public String binoName() {
 		return "Baptiste et Matthias";
 	}
+
 }
